Откатить коммит